# ResearchAtlas

./: .gitignore  AGENT.md  AUTHORS&GROUPS.md  AUTHORS.md  CATALOGUA.md  COFERENCES.md  Dockerfile  LICENSE  README.md  REPOSITORY_STRUCTURE.md  TEST_of_TIME.md  TOPICS.md  pyproject.toml
.github/workflows/: ci.yml
2022/AI/: PAPERS.md
2022/Compiler/: PAPERS.md
2022/Distributed/: PAPERS.md
2022/Others/: PAPERS.md
2022/System/: PAPERS.md
2023/AI/: PAPERS.md
2023/Compiler/: PAPERS.md
2023/Distributed/: PAPERS.md
2023/Others/: PAPERS.md
2023/System/: PAPERS.md
2024/AI/: PAPERS.md
2024/Compiler/: PAPERS.md
2024/Distributed/: PAPERS.md
2024/Others/: PAPERS.md
2024/System/: PAPERS.md
2025/AI/: PAPERS.md
2025/Compiler/: PAPERS.md
2025/Distributed/: PAPERS.md
2025/Others/: PAPERS.md
2025/System/: PAPERS.md
2026/AI/: PAPERS.md
2026/Compiler/: PAPERS.md
2026/Distributed/: PAPERS.md
2026/Others/: PAPERS.md
2026/System/: PAPERS.md
Awesome-Papers/2022/: NOTES.md  PAPERS.md
Awesome-Papers/2023/: NOTES.md  PAPERS.md
Awesome-Papers/2024/: NOTES.md  PAPERS.md
Awesome-Papers/2025/: NOTES.md  PAPERS.md
Awesome-Papers/2026/: NOTES.md  PAPERS.md
benchmarks/: README.md  benchmark_runner_overhead.py
demos/: smoke_demo.sh
figures/: generate_topic_growth.py
profiling/: README.md  visualize_profile.py
profiling/samples/: kernel_profile_example.csv
skills/code-experiments-agent/: SKILL.md
skills/paper-atlas-agent/: SKILL.md
tests/: test_analysis.py  test_cli.py  test_experiments.py  test_profiling.py
(+7 files in other folders)
