[build-system]
requires = ["hatchling>=1.25.0"]
build-backend = "hatchling.build"

[project]
name = "researchatlas-code-lab"
version = "0.1.0"
description = "Reproducible code-and-experiments workspace for AI systems research"
readme = "README.md"
requires-python = ">=3.10"
dependencies = []

[project.scripts]
research-atlas = "research_atlas_agent.cli:entrypoint"

[dependency-groups]
dev = [
  "pytest>=8.3.0",
  "pytest-cov>=5.0.0",
  "ruff>=0.6.0",
]

[tool.pytest.ini_options]
addopts = "-q"
testpaths = ["tests"]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "I", "W", "UP"]

[tool.hatch.build.targets.wheel]
packages = ["src/research_atlas_agent"]
